# debate-agents

./: CLAUDE.md  PERSONAS_DOCUMENTATION.md  README.md  advanced_orchestrator.py  agents.py  company_overview.py  config.py  convert_to_pdf.py  data_loader.py  data_manager.py  date_utils.py  debate_orchestrator.py  debug_queries.py  enhanced_orchestrator.py  ethos_cynic_prompt.md  ethos_growth_believer_prompt.md  intelligent_data_loader.py  main.py  optimized_calculative_prompt.md  optimized_conservative_prompt.md  optimized_disciplined_prompt.md  optimized_hybrid_prompt.md  optimized_optimist_prompt.md  optimized_pessimist_prompt.md  optimized_radical_prompt.md  optimized_speculative_prompt.md  pdf_converter.py  pyproject.toml  test_chromadb.py  test_connectors.py  test_fixes.py  test_index_comparison.py  test_integration.py  test_optimized_queries.py  test_query_workflow.py  test_rag_connector.py  test_reasoning.py
chroma_db/: chroma.sqlite3
config/: indices-list.csv  trendlyne_config.json  trendlyne_db.json
connectors/: indices_tracker.py  jina_web_connector.py  local_docs_connector.py  trendlyne_connector.py  youtube_connector.py  zaubacorp_connector_selenium.py
data_raw/: doc_1.md  doc_2.md  doc_3.md  doc_4.md  doc_5.md  doc_6.md  doc_7.md  doc_8.md  doc_9.md
outputs/: debate_raw_20250918_153234.json  debate_raw_20250922_183127.json  debate_raw_20250923_164626.json  debate_raw_20250929_135600.json  debate_transcript_20250922_183127.md  debate_transcript_20250923_164626.md  debate_transcript_20250929_135600.md  synthesis_report_20250918_153234.md  (+3 more)
(+9 files in other folders)
