[project]
name = "dlect-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain[google-genai,openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langmem>=0.0.29",
    "pydantic>=2.11.9",
    "markdown2>=2.4.0",
    "weasyprint>=60.0",
]
